[package]
name = "rasta-verilog"
version = "0.1.0"
edition = "2021"
respository = "https://github.com/zzjrabbit/rasta"
description = "A simple To-Verilog backend for rasta"
license = "MIT/Apache-2.0"
keywords = ["hsl","hdl","hardware"]

[dependencies]
rasta = "0.1.2"

[dev-dependencies]
pest = "2.7.11"
pest_derive = "2.7.11"
escape-bytes = "0.1.1"
